@@ -1,3 +1,8 @@
+2019-11-19      Gaius Mulley <gaius.mulley@southwales.ac.uk>
+
+	* m2/Make-lang.in:  corrected path to target libraries
+	  and name of the default library.  (libm2pim.a).
+
 2019-11-18      Gaius Mulley <gaius.mulley@southwales.ac.uk>
 
 	* m2/Make-lang.in:  fixed include path typo.
